turbulence verification section

--- a/acros.tex
+++ b/acros.tex
@@ -12,6 +12,7 @@
 \newacronym{ASME}{ASME}{American Society of Mechanical Engineers}
 \newacronym{ATWS}{ATWS}{Anticipated Transient Without Scram}
 \newacronym{BDBE}{BDBE}{Beyond Design Basis Event}
+\newacronym{BFS}{BFS}{backward-facing step}
 \newacronym{BIDS}{BIDS}{Berkeley Institute for Data Science}
 \newacronym{BTE}{BTE}{Boltzmann transport equation}
 \newacronym{BWR}{BWR}{boiling water reactor}
@@ -44,7 +45,7 @@
 \newacronym{DHS}{DHS}{Department of Homeland Security}
 \newacronym{DNF}{DNF}{delayed neutron fraction}
 \newacronym{DNP}{DNP}{delayed neutron precursor}
-\newacronym{DNS}{DNS}{Direct numerical simulation}
+\newacronym{DNS}{DNS}{direct numerical simulation}
 \newacronym{DOE}{DOE}{Department of Energy}
 \newacronym{DMSR}{DMSR}{Denatured Molten Salt Reactor}
 \newacronym{DRACS}{DRACS}{Direct Reactor Auxiliary Cooling System}
@@ -90,7 +91,8 @@
 \newacronym{IMSBR}{IMSBR}{Indian Molten Salt Breeder Reactor}
 \newacronym{IMSR}{IMSR}{Integral Molten Salt Reactor}
 \newacronym{INL}{INL}{Idaho National Laboratory}
-\newacronym{INS}{INS}{incompressible Navier-Stokes}
+\newacronym{INS}{INS}{Incompressible Navier-Stokes}
+\newacronym{INSAD}{INSAD}{Incompressible Navier-Stokes Automatic Differentiation}
 \newacronym{IO}{I/O}{input/output}
 \newacronym{IPRR1}{IRP-R1}{Instituto de Pesquisas Radioativas Reator 1}
 \newacronym{IRP}{IRP}{Integrated Research Project}
@@ -134,6 +136,7 @@
 \newacronym{MSRE}{MSRE}{Molten Salt Reactor Experiment}
 \newacronym{MSR}{MSR}{Molten Salt Reactor}
 \newacronym{NAGRA}{NAGRA}{National Cooperative for the Disposal of Radioactive Waste}
+\newacronym{NASA}{NASA}{National Aeronautics and Space Administration}
 \newacronym{NDA}{NDA}{nonlinear diffusion acceleration}
 \newacronym{NEAMS}{NEAMS}{Nuclear Energy Advanced Modeling and Simulation}
 \newacronym{NEUP}{NEUP}{Nuclear Energy University Programs}
@@ -184,6 +187,7 @@
 \newacronym{RMM}{RMM}{Response Matrix Method}
 \newacronym{ROD}{ROD}{Reactor Optimum Design}
 \newacronym{RSM}{RSM}{Reynolds stress model}
+\newacronym{SA}{SA}{Spalart-Allmaras}
 \newacronym{SAAF}{SAAF}{self-adjoint angular flux}
 \newacronym{SAM}{SAM}{System Analysis Module}
 \newacronym{SAMOFAR}{SAMOFAR}{Safety Assessment of the Molten Salt Fast Reactor}
