--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3580,6 +3580,53 @@ Publisher: Nature Publishing Group},
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\GK9II5WK\\Virtanen et al. - 2020 - SciPy 1.0 fundamental algorithms for scientific c.pdf:application/pdf},
 }
 
+@article{moser_direct_1999,
+	title = {Direct numerical simulation of turbulent channel flow up to {Reτ}=590},
+	volume = {11},
+	issn = {1070-6631},
+	url = {https://doi.org/10.1063/1.869966},
+	doi = {10.1063/1.869966},
+	abstract = {Numerical simulations of fully developed turbulent channel flow at three Reynolds numbers up to Reτ=590 are reported. It is noted that the higher Reynolds number simulations exhibit fewer low Reynolds number effects than previous simulations at Reτ=180. A comprehensive set of statistics gathered from the simulations is available on the web at http://www.tam.uiuc.edu/Faculty/Moser/channel.},
+	number = {4},
+	urldate = {2023-10-30},
+	journal = {Physics of Fluids},
+	author = {Moser, Robert D. and Kim, John and Mansour, Nagi N.},
+	month = apr,
+	year = {1999},
+	pages = {943--945},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\LRUVEAUZ\\Moser et al. - 1999 - Direct numerical simulation of turbulent channel f.pdf:application/pdf;Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\VWX4TPKD\\Direct-numerical-simulation-of-turbulent-channel.html:text/html},
+}
+
+@techreport{laufer_structure_1954,
+	title = {The structure of turbulence in fully developed pipe flow},
+	url = {https://ntrs.nasa.gov/citations/19930092199},
+	abstract = {Measurements, principally with a hot-wire anemometer, were made in fully developed turbulent flow in a 10-inch pipe at speeds of approximately 10 and 100 feet per second. Emphasis was placed on turbulence and conditions near the wall. The results include relevant mean and statistical quantities, such as Reynolds stresses, triple correlations, turbulent dissipation, and energy spectra. It is shown that rates of turbulent-energy production, dissipation, and diffusion have sharp maximums near the edge of the laminar sublayer and that there exist a strong movement of kinetic energy away from this point and an equally strong movement of pressure energy toward it.},
+	urldate = {2023-10-30},
+	author = {Laufer, John},
+	month = jan,
+	year = {1954},
+	note = {NTRS Author Affiliations: 
+NTRS Report/Patent Number: NACA-TR-1174
+NTRS Document ID: 19930092199
+NTRS Research Center: Legacy CDMS (CDMS)},
+	file = {19930092199.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\6RZ3NFK5\\Laufer - 1954 - The structure of turbulence in fully developed pip.pdf:application/pdf;Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\RZR2EV3U\\19930092199.html:text/html},
+}
+
+@inproceedings{spalart_one-equation_1994,
+	address = {Reno, NV},
+	title = {A one-equation turbulence model for aerodynamic flows},
+	url = {https://arc.aiaa.org/doi/abs/10.2514/6.1992-439},
+	doi = {10.2514/6.1992-439},
+	urldate = {2023-11-02},
+	booktitle = {30th {Aerospace} {Sciences} {Meeting} and {Exhibit}},
+	publisher = {American Institute of Aeronautics and Astronautics},
+	author = {Spalart, P. and Allmaras, S.},
+	year = {1994},
+	note = {\_eprint: https://arc.aiaa.org/doi/pdf/10.2514/6.1992-439},
+	pages = {5--21},
+	file = {AIAA Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\CS3IJHHV\\SPALART and ALLMARAS - A one-equation turbulence model for aerodynamic fl.pdf:application/pdf;AIAA Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\NCHG3PLM\\6.html:text/html},
+}
+
 @article{goldin_quasi-diffusion_1964,
 	title = {A quasi-diffusion method of solving the kinetic equation},
 	volume = {4},
@@ -3719,6 +3766,23 @@ Publisher: Nature Publishing Group},
 	note = {Place: United States
 INIS Reference Number: 8288836},
 	pages = {202--203},
+}
+
+@article{lindsay_automatic_2021,
+	title = {Automatic {Differentiation} in {MetaPhysicL} and {Its} {Applications} in {MOOSE}},
+	copyright = {This material is published by permission of the Idaho National Laboratory, operated by Battelle Energy Alliance, for the U.S. Department of Energy under Contract No. DE-AC07-05ID14517. The U.S. Government retains for itself, and others acting on its behalf, a paid-up, non-exclusive, and irrevocable worldwide license in said article to reproduce, prepare derivative works, distribute copies to the public, and perform publicly and display publicly, by or on behalf of the Government.},
+	issn = {0029-5450},
+	url = {https://ans.tandfonline.com/doi/abs/10.1080/00295450.2020.1838877},
+	abstract = {Efficient solution via Newton’s method of nonlinear systems of equations requires an accurate representation of the Jacobian, corresponding to the derivatives of the component residual equations wi...},
+	language = {EN},
+	urldate = {2024-06-03},
+	journal = {Nuclear Technology},
+	author = {Lindsay, Alexander and Stogner, Roy and Gaston, Derek and Schwen, Daniel and Matthews, Christopher and Jiang, Wen and Aagesen, Larry K. and Carlsen, Robert and Kong, Fande and Slaughter, Andrew and Permann, Cody and Martineau, Richard},
+	month = jul,
+	year = {2021},
+	note = {Publisher: Taylor \& Francis},
+	keywords = {out of group},
+	file = {Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\NGHAGQ88\\00295450.2020.html:text/html},
 }
 
 @misc{noauthor_diffusion_nodate,
@@ -3862,4 +3926,62 @@ The developed capabilities have been verified using the Molten Salt Fast Reactor
 	author = {Jaradat, Mustafa},
 	year = {2021},
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\KDVVEUAI\\Jaradat - 2021 - Development of Neutronics Analysis Capabilities fo.pdf:application/pdf},
+}
+
+@article{aupoix_extensions_2003,
+	series = {Selected {Papers} from the {Fifth} {International} {Conference} on {Engineering} {Turbulence} {Modelling} and {Measurements}},
+	title = {Extensions of the {Spalart}–{Allmaras} turbulence model to account for wall roughness},
+	volume = {24},
+	issn = {0142-727X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0142727X03000432},
+	doi = {10.1016/S0142-727X(03)00043-2},
+	abstract = {This paper describes extensions of the Spalart–Allmaras model to surface roughness, developed independently by Boeing and ONERA. They are rather simple and numerically benign, yield similar predictions, and are in fair agreement with experiments. They do not provide a description of the flow near the roughness elements, but rely instead on the “equivalent sand grain” approach. In that sense, they are not self-contained. The uncertain accuracy of the separate correlations, such as Dirling’s, needed to determine the sand grain size presents a challenge, as always. The roughness height must be much smaller than the boundary layer thickness, but the full range of roughness Reynolds number is covered. Some test cases reveal an incompatibility between the predicted effect of roughness on heat transfer and on skin friction. i.e. if the sand grain size is adjusted for skin friction, the heat transfer is too high.},
+	number = {4},
+	urldate = {2024-08-23},
+	journal = {International Journal of Heat and Fluid Flow},
+	author = {Aupoix, B. and Spalart, P. R.},
+	month = aug,
+	year = {2003},
+	keywords = {Heat transfer, Boundary layer, Equivalent sand grain, Pressure gradient, Skin friction, Turbulence modelling, Wall roughness},
+	pages = {454--462},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\YBTM7E3C\\S0142727X03000432.html:text/html},
+}
+
+@article{dacles-mariani_numericalexperimental_1995,
+	title = {Numerical/experimental study of a wingtip vortex in the near field},
+	volume = {33},
+	issn = {0001-1452},
+	url = {https://arc.aiaa.org/doi/10.2514/3.12826},
+	doi = {10.2514/3.12826},
+	number = {9},
+	urldate = {2024-08-23},
+	journal = {AIAA Journal},
+	author = {Dacles-Mariani, Jennifer and Zilliac, Gregory G. and Chow, Jim S. and Bradshaw, Peter},
+	month = sep,
+	year = {1995},
+	note = {Publisher: American Institute of Aeronautics and Astronautics},
+	keywords = {Navier Stokes Equations, Adverse Pressure Gradient, Aspect Ratio, Boundary Layer Separation, Earth, Fluid Mechanics, Kinematic Viscosity, Low Speed Wind Tunnel, Turbulence Models, Wingtip Vortices},
+	pages = {1561--1568},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\PIIMAXJN\\Dacles-Mariani et al. - 1995 - Numericalexperimental study of a wingtip vortex i.pdf:application/pdf},
+}
+
+@misc{rumsey_turbulence_nodate,
+	title = {Turbulence {Modeling} {Resource}},
+	url = {https://turbmodels.larc.nasa.gov/index.html},
+	urldate = {2024-08-23},
+	author = {Rumsey, Christopher},
+	file = {Turbulence Modeling Resource:C\:\\Users\\Sun Myung\\Zotero\\storage\\TLJIMAWJ\\index.html:text/html},
+}
+
+@misc{park_dataset_2023,
+	title = {Dataset for {Verification} and {Validation} {Tests} of the {Spalart}-{Allmaras} {Model} in {Moltres}},
+	url = {https://zenodo.org/records/10059649},
+	doi = {10.5281/zenodo.10059649},
+	abstract = {This repository contains input files, raw output data, data analysis scripts, and plots for verification and validation tests of the Spalart-Allmaras turbulence model in Moltres. These V\&V tests consist of numerical simulations of turbulent channel, pipe, and backward-facing step flows based on the works by Moser et al. (1999), Laufer (1954), and Driver \& Seegmiller (1985), respectively.},
+	urldate = {2024-08-23},
+	publisher = {Zenodo},
+	author = {Park, Sun Myung},
+	month = oct,
+	year = {2023},
+	file = {Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\83AUREEI\\10059649.html:text/html},
 }
