--- a/lit.tex
+++ b/lit.tex
@@ -330,7 +330,7 @@ the necessary input data. It is also helpful to perform model verification studi
 problems like the bare homogeneous problem domain in the CNRS benchmark before embarking on more
 detailed validation studies that require accurate models of experimental setups.
 
-\section{Turbulence Modeling in MSRs}
+\section{Turbulence Modeling in MSRs} \label{sec:lit-turb}
 
 In fluid dynamics, turbulent flow is characterized by unsteady, irregular, and
 chaotic fluid motion as opposed to neat, parallel flow layers in laminar flow
