--- a/moltres.tex
+++ b/moltres.tex
@@ -245,7 +245,7 @@ flow as they circulate the fuel salt loop.
 
 \subsubsection{Incompressible Flow Model} \label{sec:th}
 
-Moltres relies on MOOSE's \texttt{Heat} \texttt{Conduction} and
+Moltres relies on MOOSE's \texttt{Heat} \texttt{Transfer} and
 \texttt{Navier-Stokes} physics modules for its thermal-hydraulics modeling
 capabilities. While the \texttt{Navier-Stokes} module supports
 compressible and incompressible flow modeling, this work focuses on
