--- a/verification.tex
+++ b/verification.tex
@@ -1,4 +1,8 @@
 \input{moltres}
 \input{benchmark}
+
 \section{MSRE Zero-Power Pump Experiments}
-\section{Turbulence Model Verification}
+
+\section{Spalart-Allmaras Turbulence Model Verification}
+
+\input{turbulence}
