turbulence model verification section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3985,3 +3985,19 @@ The developed capabilities have been verified using the Molten Salt Fast Reactor
 	year = {2023},
 	file = {Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\83AUREEI\\10059649.html:text/html},
 }
+
+@techreport{krist_cfl3d_1998,
+	title = {{CFL3D} {User}'s {Manual} ({Version} 5.0)},
+	url = {https://ntrs.nasa.gov/citations/19980218172},
+	abstract = {This document is the User's Manual for the CFL3D computer code, a thin-layer Reynolds-averaged Navier-Stokes flow solver for structured multiple-zone grids. Descriptions of the code's input parameters, non-dimensionalizations, file formats, boundary conditions, and equations are included. Sample 2-D and 3-D test cases are also described, and many helpful hints for using the code are provided.},
+	number = {NAS 1.15:208444},
+	urldate = {2024-09-12},
+	author = {Krist, Sherrie L. and Biedron, Robert T. and Rumsey, Christopher L.},
+	month = jun,
+	year = {1998},
+	note = {NTRS Author Affiliations: BaNANePOS, Inc., NASA Langley Research Center
+NTRS Document ID: 19980218172
+NTRS Research Center: Langley Research Center (LaRC)},
+	keywords = {Aerodynamics},
+	file = {19980218172.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\MAI8GC4N\\Krist et al. - 1998 - CFL3D User's Manual (Version 5.0).pdf:application/pdf;Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\RT2WNTSS\\19980218172.html:text/html},
+}
