--- a/cnrs-benchmark/conclusion.tex
+++ b/cnrs-benchmark/conclusion.tex
@@ -2,7 +2,7 @@
 
 \glspl{MSR} feature significant multiphysics interactions, presenting
 computational challenges for many existing multiphysics reactor analysis
-software. This chapter presents code-to-code verification of Moltres'
+software. This section presented code-to-code verification of Moltres'
 capabilities in modeling such multiphysics phenomena in fast-spectrum
 \glspl{MSR} based on the CNRS benchmark \cite{tiberga_results_2020}.
 The CNRS benchmark assesses multiphysics \gls{MSR} simulation
