MSRE pump transient section

--- a/verification.tex
+++ b/verification.tex
@@ -3,6 +3,8 @@
 
 \section{MSRE Zero-Power Pump Experiments}
 
+\input{msre-pump}
+
 \section{Spalart-Allmaras Turbulence Model Verification}
 
 \input{turbulence}
